# android-juce-cmake

./: .gitignore  .gitmodules  JUCE-support-Android-CMake.patch  README.md  build.bat  build.gradle  build.sh  settings.gradle
.github/workflows/: actions.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
app/src/main/res/values/: string.xml
gradle/wrapper/: gradle-wrapper.properties
